--- a/CustomerService/packages.config
+++ b/CustomerService/packages.config
@@ -4,9 +4,11 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net471" />
   <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net471" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net471" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net471" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net471" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net471" />
