--- a/CustomerService/Customer.Service.csproj
+++ b/CustomerService/Customer.Service.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CustomerRepository.cs" />
+    <Compile Include="ViewModels\CustomerViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
